# Kimi-Player

./: .cnb.yml  index.html  package-lock.json  package.json  pnpm-lock.yaml  tauri.conf.json  vite.config.ts
.github/workflows/: tauri-build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.android.conf.json  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src/components/: BottomNav.tsx  FullPlayer.tsx  MiniPlayer.tsx  PlaylistModal.tsx
src/hooks/: useMusicStore.ts
src/sections/: ArtistDetail.tsx  Home.tsx  PlaylistDetail.tsx  PlaylistSquare.tsx  Profile.tsx  Search.tsx
src/services/: api.ts
src/types/: music.ts
